# FormatFuzzer

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile.am  Makefile.in  README-pfp.md  README.md  _config.yml  aclocal.m4  avi.cpp  bt.h  build.sh  config.h.in  configure  configure.ac  create.py  depcomp  ffcompile  file_accessor.h  foo2.dec  formatfuzzer.h  fuzzer.cpp  generator.cpp  gif.cpp  install-sh  midi-nf.cpp  midi-orig.cpp  midi.cpp  missing  mp4.cpp  mp4Checker.py  out.avi  out.midi  out.pcap  out.txt  (+11 more)
.github/ISSUE_TEMPLATE/: bug_report.md  concrete_bug.md  documentation.md  feature_request.md
Converter/: Converter.py  main.py  notes.txt  test.bt  test.c  test.yaml
Converter/cfile/: .gitignore  LICENSE  README.md  setup.cfg  usage.py
Converter/cfile/doc/: cfile.rst  conf.py  index.rst
Converter/cfile/src/cfile/: __init__.py
Converter/test/: testbench.py
Converter/tools/: Converter.py  expr-parser.py  testbench.py
assets/: Icon.key
checkers/: avi.sh  bmp.sh  gif.sh  jpg.sh  midi.sh  mp3.sh  mp4.sh  pcap.sh  pdf.sh  png.sh  wav.sh  zip.sh  zipadv.sh
docs/: Gemfile  Makefile  README.md  README.txt  _config.yml
docs/_posts/: 2021-11-04-How-to-make-GIFs.md  2021-11-09-How-to-make-GIFs.md
docs/assets/: Splash.key
docs/source/: bitstream.rst  conf.py  debugger.rst  differences.rst  fields.rst  functions.rst  fuzz.rst  getting_started.rst  index.rst  interpreter.rst  metadata.rst
generators/: PNG.cpp
pfp/: __init__.py  __main__.py  bitwrap.py  dbg.py  errors.py  fields.py  functions.py  interp.py  six.py  utils.py
pfp/builtin/: __init__.py  util.py
pfp/fuzz/: __init__.py  basic.py  rand.py  strats.py
pfp/native/: __init__.py  compat_consts.py  compat_interface.py  compat_io.py  compat_math.py  compat_string.py  compat_tools.py  dbg.py  packers.py  util.py  watchers.py
synthesized/: PNG.cpp
templates/: GIF-orig.bt  MP4-010.bt  MP4_2.bt  PNG.bt  avi-orig.bt  avi.bt  bmp-orig.bt  bmp.bt  dex-orig.bt  doc-orig.bt  elf-orig.bt  gif-orig.bt  gif-origx.bt  gif.bt  jpg-orig.bt  jpg.bt  jpg_orig.bt  midi-orig.bt  midi.bt  mp3-orig.bt  mp3.bt  mp4-orig.bt  mp4.bt  mp4_audioOnly.bt  mp4_orig.bt  mp4_videoOnly.bt  ogg-orig.bt  pcap-orig.bt  pcap-parse.bt  pcap.bt  pdf-orig.bt  pdf.bt  png-orig.bt  png.bt  vdi-wip.bt  wav-orig.bt  wav.bt  zip-orig.bt  zip.bt  zipadv-orig.bt  (+1 more)
testcases/avi/: TargetVideo_target_video7.avi  (+5 more)
tests/: test_arrays.py  test_basic.py  test_bitfields.py  test_bitwrap.py  test_cast.py  test_changeset.py  test_compat.py  test_compat_checksums.py  test_compat_strings.py  test_control_flow.py  test_dbg.py  test_enums.py  test_fields.py  test_functions.py  test_fuzz.py  test_integer_promotion.py  test_metadata.py  test_strings.py  test_struct_union.py  test_type_creation.py  utils.py
(+19 files in other folders)
